<resources>
    <string name="app_name">ALC Challenge</string>
    <string name="txt_about_alc">About ALC</string>
    <string name="text_my_profile">My Profile</string>
    <string name="txt_welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="text_track">Track: Android</string>
    <string name="text_country">Country : Sénégal</string>
    <string name="email_sambabery_kane_gmail_com">Email: sambabery.kane@gmail.com</string>
    <string name="text_phone">Phone Number: 781507584</string>
    <string name="text_slack">Slack Username: sambakaan</string>
    <string name="txt_full_name">Samba Bery KANE</string>
</resources>
